force-app/main/default/objects/RW_Email_To_Lead_Activity__c/RW_Email_To_Lead_Activity__c.object-meta.xml
<CustomObject>
    <description>This object is used for tracking the leads coming from emails</description>
    <label>Email To Lead Activity</label>
    <nameField>
        <displayFormat>E2L-{000000}</displayFormat>
        <label>Email To Lead Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email To Lead Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>