force-app/main/default/objects/RW_Email_To_Lead_Activity__c/fields/RW_Body__c.field-meta.xml
<CustomField>
    <fullName>RW_Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>