force-app/main/default/objects/RW_Email_To_Lead_Activity__c/fields/RW_From_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_From_Email__c</fullName>
    <label>From Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>