force-app/main/default/objects/RW_Email_To_Lead_Activity__c/fields/RW_Lead__c.field-meta.xml
<CustomField>
    <fullName>RW_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Email To Lead Activities</relationshipLabel>
    <relationshipName>Email_To_Lead_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>