force-app/main/default/objects/RW_Email_To_Lead_Activity__c/fields/RW_Subject__c.field-meta.xml
<CustomField>
    <fullName>RW_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>